<resources>
  <string name="app_name">My Application</string>
  <string name="subscription">Subscription</string>
  <string name="search">Search</string>
  <string name="home">Home</string>
  <string name="favorite">Favorite</string>
  <string name="settings">Settings</string>
  <string name="exit_app">Exit app</string>
  <string name="language">Language</string>
  <string name="label_alballam">AlBallam</string>
  <string name="label_group">Group</string>
  <string name="label_sign_in">Sign in</string>
  <string name="email">Email</string>
  <string name="label_password">Password</string>
  <string name="shows">Shows</string>
  <string name="plays">Plays</string>
  <string name="more_details">More Details</string>
  <string name="most_watched">Most Watched</string>
  <string name="new_release">New Release</string>
  <string name="all">All</string>
  <string name="play_now">Play Now</string>
  <string name="movie_time">Time :</string>
  <string name="promo">Promo</string>
  <string name="production">Cast</string>
  <string name="fav_txt">Favorite</string>
  <string name="empty_search">No  result for your search</string>
  <string name="label_author">Author</string>
  <string name="label_directed_by">Directed by</string>
  <string name="wishlist_screen_label">Favorite</string>
  <string name="search_hint">Search for plays and shows</string>
  <string name="ar">عربى</string>
  <string name="en">English</string>
  <string name="label_terms_and_conditions">Terms and Conditions</string>
  <string name="label_ok">OK</string>
  <string name="label_cancel">Cancel</string>
  <string name="msg_confirm_change_language">Are you sure you want to change the language ?</string>
  <string name="are_you_sure_want_to_exit_app">Are you sure want to exit app ?</string>
  <string name="error_player"><![CDATA["  <string name=\"error_player\">There was an error initializing the YouTubePlayer (%1$s)</string> "]]></string>
  <string name="episodes">Episodes</string>

</resources>