<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:theme="@style/Theme.MyApplication">

  <FrameLayout
    android:id="@+id/content_container"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:nextFocusLeft="@id/sideMenu"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/line" />

  <View
    android:id="@+id/line"
    android:layout_width="1dp"
    android:layout_height="match_parent"
    android:background="@drawable/line"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/content_container"
    app:layout_constraintStart_toEndOf="@id/sideMenu"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.leanback.widget.BrowseFrameLayout
    android:id="@+id/sideMenu"
    android:layout_width="50dp"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:nextFocusRight="@id/content_container"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="32dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/selector_menu"
        android:drawableStart="@drawable/ic_search_tab"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/search"
        android:textColor="@color/white" />

      <TextView
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/selector_menu"
        android:drawableStart="@drawable/ic_home_tab_not_selected"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/home"
        android:textColor="@color/white" />

      <TextView
        android:id="@+id/btn_fav"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/selector_menu"
        android:drawableStart="@drawable/ic_fav"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/favorite"
        android:textColor="@color/white" />


      <TextView
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/selector_menu"
        android:drawableStart="@drawable/ic_setting_tab"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/settings"
        android:textColor="@color/white" />

      <TextView
        android:id="@+id/btn_exit_app"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/selector_menu"
        android:drawableStart="@drawable/ic_exit_app"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/exit_app"
        android:textColor="@color/white" />

    </LinearLayout>

  </androidx.leanback.widget.BrowseFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>