<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  android:orientation="vertical">


  <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingEnd="0dp">


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="30dp"
      android:paddingTop="10dp"
      android:paddingEnd="47dp"
      android:paddingBottom="10dp">


      <TextView
        android:id="@+id/tvSettingsLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/din_next_regular"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="16sp" />

      <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="start"
        android:orientation="horizontal">

        <!--            todo radiobuttons font -->
        <RadioButton
          android:id="@+id/rbSettingsAr"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="@string/ar"
          android:textAllCaps="true" />

        <RadioButton
          android:id="@+id/rbSettingsEn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:checked="false"
          android:text="@string/en"
          android:textAllCaps="true" />

      </RadioGroup>

    </RelativeLayout>


    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/color_dark_grey" />


    <RelativeLayout
      android:id="@+id/rlTerms"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/color_dark_grey"
      android:paddingStart="30dp"
      android:paddingTop="15dp"
      android:paddingEnd="47dp"
      android:paddingBottom="15dp">


      <TextView
        android:id="@+id/tvSettingsTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/label_terms_and_conditions"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/din_next_regular" />

    </RelativeLayout>


    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/color_dark_grey" />

  </LinearLayout>


</LinearLayout>