<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".5" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_top"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".1" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".07" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/sectionTitleTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:layout_marginTop="12dp"
    android:fontFamily="@font/din_next_regular"
    android:textColor="@color/white"
    app:layout_constrainedWidth="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="الاكثر مشاهدة" />

  <ImageView
    android:id="@+id/img_banner"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:adjustViewBounds="true"
    android:scaleType="fitXY"
    app:layout_constraintBottom_toTopOf="@id/guideline_center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_default="percent" />

  <ImageView
    android:id="@+id/img_banner_gradient"
    android:layout_width="0dp"
    android:layout_height="300dp"
    android:adjustViewBounds="true"
    android:src="@drawable/home_header_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_default="percent" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:id="@+id/home_filter"
    android:orientation="horizontal"
    app:layout_constraintBottom_toTopOf="@id/guideline_center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/moreDetailsTv">

    <TextView
      android:id="@+id/allTv"
      android:layout_width="69dp"
      android:layout_height="34dp"
      android:background="@drawable/selector_btn"
      android:clickable="true"
      android:fontFamily="@font/din_next_medium"
      android:focusable="true"
      android:gravity="center"
      android:includeFontPadding="false"
      android:text="@string/all"
      android:textColor="@color/white"
       />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="34dp"
      android:layout_marginHorizontal="12dp"
      android:background="@drawable/selector_btn"
      android:clickable="true"
      android:id="@+id/mostWatchedTv"
      android:fontFamily="@font/din_next_medium"
      android:focusable="true"
      android:gravity="center"
      android:includeFontPadding="false"
      android:text="@string/most_watched"
      android:textColor="@color/white" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="34dp"
      android:fontFamily="@font/din_next_medium"
      android:background="@drawable/selector_btn"
      android:clickable="true"
      android:id="@+id/newReleaseTv"
      android:focusable="true"
      android:gravity="center"
      android:includeFontPadding="false"
      android:text="@string/new_release"
      android:textColor="@color/white" />
  </LinearLayout>



  <TextView
    android:id="@+id/title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:fontFamily="@font/din_next_regular"
    android:text="@string/most_watched"
    android:textColor="@color/white"
    app:layout_constrainedWidth="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/ivMoviePhoto"
    android:layout_width="90dp"
    android:layout_height="38dp"
    android:layout_marginTop="14dp"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintTop_toBottomOf="@+id/title" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/moreDetailsTv"
    android:layout_width="112dp"
    android:layout_height="44dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/selector_more_details_btn"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:includeFontPadding="false"
    android:fontFamily="@font/din_next_medium"
    android:text="@string/more_details"
    android:textColor="@color/white"
    android:textSize="12sp"
    app:layout_constrainedWidth="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintStart_toStartOf="@id/ivMoviePhoto"
    app:layout_constraintTop_toBottomOf="@id/description" />

  <TextView
    android:id="@+id/description"

    android:layout_marginTop="16dp"
    android:lineSpacingMultiplier="1.2"
    android:text="Language : English"
    android:textSize="13sp"
    android:layout_width="210dp"
    android:layout_height="wrap_content"
    android:ellipsize="end"
    android:fontFamily="@font/din_next_medium"
    android:lineSpacingExtra="5sp"
    android:maxLines="3"
    android:textColor="@color/home_movie_description"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintTop_toBottomOf="@+id/ivMoviePhoto"
    app:layout_constraintWidth_default="percent"
    />

  <FrameLayout
    android:id="@+id/list_fragment"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/home_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>